# AI_girlfriend

./: .env  .gitignore  .pre-commit-config.yaml  README.md  cprofile.prof  dump.rdb  oh.code-workspace  pyproject.toml
capabilities/: calendar_questions.py  capability_with_gpt.py  pause_for_10_seconds.py  personality_quiz.py  system_stats.py  template.py
dev_scripts/: post_install.sh  pre_install.sh
openhome/: LLM.py  app_globals.py  config.yaml  conversation_manager.py  main.py  mainnewclean.py  sound_creator.py  utility.py
openhome/capabilities/: capabilities.json  end_session.py  pause_for_10_seconds.py  play_music.py  switch_personality.py
openhome/history_files/: history copy.json  history.json  history_manager.py  history_summarizer.py  history_summarizer_prompt.txt  recent_history.json  recent_summarized_history.txt  summarized_history.txt
openhome/personalities/: alan_watts.txt  current_mood.json  emotion_detection_prompt.txt  john.txt  marie_kerry.txt  mood.json  mood_evolver.py  mood_evolving_instruction.txt  personalities.json  vickey.txt
openhome/voice_input_output/: loading_sounds.py
src/: main.py  personality_conf.py  system_conf.py
src/agent/: base.py  capability.py  io_interface.py  memory.py  message.py
src/agent/llm_prompt_strategy_templates/: tts_cold_start.md  tts_response.md  ttt_mood_evolver.md
src/clients/: assembly.py  base_api_request.py  deepgram.py  deepgram_test.py  eleven_labs.py  eleven_labs_wss.py  local_microphone.py  openai.py
src/dev_tools/: db_management.py  upload_env.py
src/dev_tools/default_data/: default_personalities.json
src/dev_tools/default_data/personalities/alan_watts/: description.md  information.md  language.md
src/dev_tools/default_data/personalities/allan_watts/: description.md  information.md  language.md  purpose.md
src/dev_tools/default_data/personalities/conspiracy_radio/: description.md
src/dev_tools/default_data/personalities/debate_bot/: description.md
src/dev_tools/default_data/personalities/george_suave/: description.md
src/tests/: test_agent.py  test_user_conf.py
src/utils/: db.py  ip.py  markdown_loader.py  pretty_console.py  prompt.py  timeit.py
tests/: elevenlabs_openai_wss.py  test_agent.py  test_capabilities.py  test_user_conf.py
(+1 files in other folders)
